compiler/testData/diagnostics/tests/exceptions/unresolvedReferenceDuringProjectionRelationChecking.kt
// FIR_IDENTICAL
// ISSUE: KT-69407

fun <T> <!UNRESOLVED_REFERENCE!>UnresolvedClass<!><out T>.test() { }
